fixed: a lot of code blocks in notes

--- a/public/notes/Algorithms/index.html
+++ b/public/notes/Algorithms/index.html
@@ -34,7 +34,7 @@ def binary_search(target, arr):
     return False</code></p><p>//target 8, [1,2,3,4,5,6,7,8,9,10]
 //[6,7,8,9,10]
 //return [8]
-<code></code><code></code></p><h2>Merge Sort</h2><p>Split the list in 2 halves all the way down to 1 element. Then recombines it back.</p><pre><code></code></pre><pre><code></code></pre><h1>Dijkstras</h1><p>Visit all veritces and find the path with minimum distance</p><p><code></code><code>py
+<code></code><code></code></p><h2>Merge Sort</h2><p>Split the list in 2 halves all the way down to 1 element. Then recombines it back.</p><pre><code></code></pre><pre><code></code></pre><h1>Dijkstras</h1><p>Visit all veritces and find the path with minimum distance</p><p><code></code><code>
 class Graph:
 	def __init__(self):
 		self.graph = {}
