--- a/public/notes/Scala/index.html
+++ b/public/notes/Scala/index.html
@@ -19,13 +19,13 @@
     </nav>
 
     <article>
-        <div><h1>Scala</h1><p>These notes are incomplete because it was mostly for a project. This lanaguage is pretty aesticially pleasing.</p><h2>Basics</h2><p><code></code><code>
-import scala.io.StdIn.readLine</code></p><p>println("Hello World")
+        <div><h1>Scala</h1><p>These notes are incomplete because it was mostly for a project. This lanaguage is pretty aesticially pleasing.</p><h2>Basics</h2><pre><code>import scala.io.StdIn.readLine
+println("Hello World")
 val firstname: String = readLine()
 val lastname: String = readLine()
 println(s"Name: $firstname $lastname")
 println(s"do math via {2+2} = 4")
-<code></code><code></code></p><h2>Types</h2><pre><code>Int | Long | Short | Double | Float
+</code></pre><h2>Types</h2><pre><code>Int | Long | Short | Double | Float
 BigInt | BigDecimal
 String
 Byte
