--- a/public/notes/Golang/index.html
+++ b/public/notes/Golang/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> HTTPS </title>
+    <title> Golang </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
@@ -19,33 +19,41 @@
     </nav>
 
     <article>
-        <div><h1>Golang</h1><p>It's mostly complete, but needs to be touched upon.</p><h2>Types</h2><p><code></code><code>
-bool</code></p><p>string</p><p>int  int8  int16  int32  int64
-uint uint8 uint16 uint32 uint64 uintptr</p><p>byte // alias for uint8</p><p>rune // alias for int32
-     // represents a Unicode code point</p><p>float32 float64</p><p>complex64 complex128
-<code></code><code></code></p><h2>Printing</h2><p><code></code><code>
-import fmt</code></p><p>fmt.Printf("string")
-fmt.Printf(variable)</p><p>%v -> value
+        <div><h1>Golang</h1><p>It's mostly complete, but needs to be touched upon.</p><h2>Types</h2><pre><code>bool
+string
+int  int8  int16  int32  int64
+uint uint8 uint16 uint32 uint64 uintptr
+byte // alias for uint8
+rune // alias for int32
+     // represents a Unicode code point
+float32 float64
+complex64 complex128
+</code></pre><h2>Printing</h2><pre><code>import fmt
+fmt.Printf("string")
+fmt.Printf(variable)
+%v -> value
 %s -> string
 %d -> int
 %.2f -> float with 2 decimals
 fmt.Sprintf("Hello %v", "world")
 fmt.Sprintf("Hello %s", "world")
-<code></code><code></code></p><h2>Strongly typed</h2><p><code></code><code>
-var first_name string = "Gary"
-last_name := "Feng"</code></p><p>var age = 2.6
-short_age := int(age)</p><p>//age = 24.6
-//short_age = 24</p><p>const gender = "M"
-<code></code><code></code></p><p>Both are string, walrus <code>:=</code> will "infer" the type to assign the variable</p><h2>IF ELSE</h2><p><code></code><code>
-if length1 < length2{
+</code></pre><h2>Strongly typed</h2><pre><code>var first_name string = "Gary"
+last_name := "Feng"
+var age = 2.6
+short_age := int(age)
+//age = 24.6
+//short_age = 24
+const gender = "M"
+</code></pre><p>Both are string, walrus <code>:=</code> will "infer" the type to assign the variable</p><h2>IF ELSE</h2><pre><code>if length1 < length2{
     asd
 } else if length1 > length2{
     asd
 } else {
     asd
-}</code></p><p>if length := getLength(variable); length < 1 {
 }
-<code></code><code></code></p><p>if you want to make a variable inside the scope</p><h2>Switch Case</h2><pre><code>func name(plan string) float64{
+if length := getLength(variable); length < 1 {
+}
+</code></pre><p>if you want to make a variable inside the scope</p><h2>Switch Case</h2><pre><code>func name(plan string) float64{
     switch plan{
     case "free":
         return 10.0
@@ -61,26 +69,27 @@ So if a function returns 2 values like <code>getXY()</code> but we only care abo
     //first and last are intialized with no values
     return //will return first and last if left blank
 }
-</code></pre><h2>Struct</h2><p>Go doesn't have inheriance or classes, but struct's sort of allows data only inheriance</p><p><code></code><code>
-type car struct {
+</code></pre><h2>Struct</h2><p>Go doesn't have inheriance or classes, but struct's sort of allows data only inheriance</p><pre><code>type car struct {
     model string
     speed int
     name string
     color string
     cost float64
-}</code></p><p>func (myCar car) isCar() bool{
+}
+func (myCar car) isCar() bool{
     //check if myCar is a valid car
     return true or false
-}</p><p>fmt.Println(myCar.isCar())
+}
+fmt.Println(myCar.isCar())
 //true or false
-<code></code><code></code></p><p>Memory layout matters</p><pre><code>type stats struct {
+</code></pre><p>Memory layout matters</p><pre><code>type stats struct {
     Reach    uint16
     NumPosts uint8
     NumLikes uint8
 }
-</code></pre><p><img src=":/afb8eaeab1de470f8eee0074ca9f77b4" alt="b7604073197af25f77e411a6daf35aed.png"></img>  
+</code></pre><p><img src="/images/b7604073197af25f77e411a6daf35aed.png" alt="b7604073197af25f77e411a6daf35aed.png"></img>
 Notice how it's 16 then 8 then 8. if the memory is 8 then 16 then 8. It will add padding which will waste memory space.  
-<img src=":/f777faa76179486486b181d2b8f64d9c" alt="f7fb5aa446ab886a231c2fda12441add.png"></img>  
+<img src="/images/f7fb5aa446ab886a231c2fda12441add.png" alt="f7fb5aa446ab886a231c2fda12441add.png"></img>
 <a href="https://pkg.go.dev/reflect">reflect package</a> can help debug <a href="https://go101.org/article/memory-layout.html">memory layout</a></p><p><code>empty := struct{}{}</code>  
 this is an empty struct.</p><pre><code>type emptyStruct struct{}
 empty := emptyStruct{}
@@ -97,17 +106,17 @@ Example of a function for a structure.</p><pre><code>func (myUser User) SendMess
 }
 Bob.SendMessage("Hello World", 11)
 </code></pre><p>\> > RE ORGANIZE THIS < <</p><h2>Interface</h2><p>A collection of method signatures.</p><pre><code>map[string]any
-</code></pre><h1>Variadic</h1><p><code></code><code>
-import package</code></p><p>func sum(nums ...int) int{
+</code></pre><h2>Variadic</h2><pre><code>import package
+func sum(nums ...int) int{
 	sum := 0
 	for i := 0; i < len(nums); i++{
 		sum += nums[i]
 	}
 	return sum
 }
-<code></code><code></code></p><p>Notice the <code>...</code> before int. It takes an abirtary number of final arguments.</p><pre><code>// func make([]T, len, cap) []T
+</code></pre><p>Notice the <code>...</code> before int. It takes an abirtary number of final arguments.</p><pre><code>// func make([]T, len, cap) []T
 mySlice := make([]int, 5, 10)
-</code></pre><h1>Append</h1><pre><code>i := make([]int, 3, 8)
+</code></pre><h2>Append</h2><pre><code>i := make([]int, 3, 8)
 fmt.Println("len of i:", len(i))
 // len of i: 3
 fmt.Println("cap of i:", cap(i))
@@ -130,15 +139,16 @@ fmt.Println("j:", j)
 // j: [0 0 0 5]
 fmt.Println("g:", g)
 // g: [0 0 0 5]
-</code></pre><h1>Slices (Arrays)</h1><p><code>var myInts[10]</code>
+</code></pre><h2>Slices (Arrays)</h2><p><code>var myInts[10]</code>
 slice of size 10
 <code>primes := [6]int{1,2,3,4,5,6}</code>
 slices
-<code>primes[1:4]</code></p><h1>Loops</h1><p><code>for i := 0; i < len(something); i++{
+<code>primes[1:4]</code></p><h2>Loops</h2><p><code>for i := 0; i < len(something); i++{
 }</code></p><p><code>for i, ele := range slice{
-}</code></p><h1>Maps</h1><p>to make a map in go, need to use make method
+}</code></p><h2>Maps</h2><p>to make a map in go, need to use make method
 <code>dict := make(map[string]int)</code>
-this is a map of key string to int value.</p><h1>Pointers</h1><p>Uses <code></code><i>` and `&`</i></p><h1>Channels</h1><p>Channel creation
+this is a map of key string to int value.</p><h2>Pointers</h2><p>Uses \<i> and &</i></p><pre><code>ADD CODE SNIPPET
+</code></pre><h2>Channels</h2><p>Channel creation
 <code>ch <- make(chan int, len(size))</code>
 Sending to channel
 <code>ch <- 5</code>
@@ -158,8 +168,8 @@ Select statement</p><pre><code>select{
 case:
 default:
 }
-</code></pre><p>Code snippet</p><p><code></code><code>
-import "time"</code></p><p>func processMessages(messages []string) []string {
+</code></pre><p>Code snippet</p><pre><code>import "time"
+func processMessages(messages []string) []string {
 	ch := make(chan string, len(messages))
 	for _, message := range messages{
 		go func(msg string){
@@ -171,11 +181,12 @@ import "time"</code></p><p>func processMessages(messages []string) []string {
 		processedMsgs[i] = <-ch
 	}
 	return processedMsgs
-}</p><p>func process(message string) string {
+}
+func process(message string) string {
 	time.Sleep(1 <i> time.Second)
 	return message + "-processed"
 }
-```</i></p><h1>Mutexes</h1><h1>Generics</h1><pre><code>func last<a href="s []T">T any</a> T {
+</i></code></pre><h2>Mutexes</h2><h2>Generics</h2><pre><code>func last<a href="s []T">T any</a> T {
 	if len(s) == 0 {
 		var zero T
 		return zero
@@ -183,52 +194,59 @@ import "time"</code></p><p>func processMessages(messages []string) []string {
 	return s[len(s)-1]
 }
 </code></pre><p>T is the generic variable name. any allows it to be a generic
-in order for there to be a 0 generic.</p><h2>Constraints</h2><p>If you want only certain generics/types then you can make an interface</p><p><code></code><code>
-type numbers interface {
+in order for there to be a 0 generic.</p><h2>Constraints</h2><p>If you want only certain generics/types then you can make an interface</p><pre><code>type numbers interface {
     ~int | ~int8 | ~int16 | ~int32 | ~int64 |
         ~uint | ~uint8 | ~uint16 | ~uint32 | ~uint64 | ~uintptr |
         ~float32 | ~float64 |
-}</code></p><p>func doMath<a href="vals []T">T numbers</a> T {
+}
+func doMath<a href="vals []T">T numbers</a> T {
 	//do something and return a T type
 }
-<code></code><code></code></p><h1>Enum</h1><h1>HTTPS</h1><h2>JSON</h2><p><code></code><code>
+</code></pre><h2>Enum</h2><p>ADD CODE SNIPPET</p><h2>HTTPS</h2><p>ADD CODE SNIPPET</p><h2>JSON</h2><p><code></code><code>
 type Item struct{
 	Id 					string </code>json:"id"<code>
 	Name			 string </code>json:"name"<code>
 	ItemLevel int		 </code>json:"item_level"<code>
-}</code></p><p>func getJSONtoGoStruct(url string) ([]Item, error){
+}
+func getJSONtoGoStruct(url string) ([]Item, error){
 	res, res_err := http.Get(url)
 	defer res.Body.Close() //to prevent mem issue
-	var items []Items</p><p>decoder := json.NewDecoder(res.Body)
+	var items []Items
+	decoder := json.NewDecoder(res.Body)
 	err := decoder.Decode(&items)
 ------------------------------------OR----------------------------------------
 	data []byte, err := io.ReadAll(res.Body)
-	json.Unmarshal(data, &items)</p><p>return items
+	json.Unmarshal(data, &items)</code></p><p>return items
 }
 <code></code><code></code></p><p>Makes a GET request and turns the result into a Go struct</p><p><code>data, err := json.Marshal(items)</code>
-Turns a go struct into a <code>[]bytes</code></p><h2>CRUD</h2><p><code></code><code>
-func createPostReq(url, apiKey string, user User)(User, err){
+Turns a go struct into a <code>[]bytes</code></p><h2>CRUD</h2><pre><code>func createPostReq(url, apiKey string, user User)(User, err){
 	jsonData, err := json.Marshal(data)
-	//err  check</code></p><p>req, err := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
-	//err check</p><p>req.Header.Set("Content-Type", "application/json")
-	req.Header.Set("X-API-Key", apiKey)</p><p>client := &http.Client{}
+	//err  check
+	req, err := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
+	//err check
+	req.Header.Set("Content-Type", "application/json")
+	req.Header.Set("X-API-Key", apiKey)
+	client := &http.Client{}
 	res, err := client.Do(req)
-	//err check</p><p>defer res.Body.Close()</p><p>var newUser User
+	//err check
+	defer res.Body.Close()
+	var newUser User
 	decoder := json.NewDecoder(res.Body)
 	err = decoder.Decode(&newUser)
-	//err check</p><p>return data, nil
+	//err check
+	return data, nil
 }
-<code></code><code></code></p><p><code>http:NewRequest("GET/POST/PUT/DELETE", url, nil/bytes.NewBuffer(jsonData))</code></p><p><code></code><code>
-brew install postgresql@16
+</code></pre><p><code>http:NewRequest("GET/POST/PUT/DELETE", url, nil/bytes.NewBuffer(jsonData))</code></p><pre><code>brew install postgresql@16
 brew services start postgresql
 /opt/homebrew/opt/postgresql@16/bin/psql --version
 echo 'export PATH="/opt/homebrew/opt/postgresql@16/bin:$PATH"' >> ~/.zshrc
-psql --version</code></p><p>brew services start postgresql@16
+psql --version
+brew services start postgresql@16
 psql postgres
 CREATE DATABASE gator;
 \c gator
 SELECT version();
-<code></code><code></code></p></div>
+</code></pre></div>
     </article>
 
     <footer class="footer">
