--- a/public/notes/Kubernetes/index.html
+++ b/public/notes/Kubernetes/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Scala </title>
+    <title> Kubernetes </title>
     <link href="/index.css" rel="stylesheet">
 </head>
 
@@ -19,21 +19,7 @@
     </nav>
 
     <article>
-        <div><h1>Scala</h1><p>These notes are incomplete because it was mostly for a project. This lanaguage is pretty aesticially pleasing.</p><h2>Basics</h2><pre><code>import scala.io.StdIn.readLine
-println("Hello World")
-val firstname: String = readLine()
-val lastname: String = readLine()
-println(s"Name: $firstname $lastname")
-println(s"do math via {2+2} = 4")
-</code></pre><h2>Types</h2><pre><code>Int | Long | Short | Double | Float
-BigInt | BigDecimal
-String
-Byte
-</code></pre><h2>OOP</h2><pre><code>trait Speaker:
-	def speak(): String
-class Dog(name: String) extends Speaker:
-	def speak(): String = "Woof!"
-</code></pre></div>
+        <div><h1>Kubernetes</h1><p>Have not start course yet.</p></div>
     </article>
 
     <footer class="footer">
